# the-seer

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  DESIGN.md  PLANS.md  README.md  VISION.md  docker-compose.db.yml  docker-compose.gemini-host.yml  docker-compose.yml  skills-lock.json
seer-backend/: .env.example  Dockerfile  README.md  pyproject.toml
seer-backend/migrations/clickhouse/: 001_mvp_phase2_history_tables.sql  002_agentic_workflow_transcripts.sql  003_agentic_workflow_transcripts_action_uri.sql
seer-backend/migrations/postgres/: 001_action_orchestration_tables.sql
seer-backend/src/seer_backend/: __init__.py  logging.py  main.py
seer-backend/src/seer_backend/actions/: __init__.py  errors.py  maintenance.py  models.py  repository.py  service.py
seer-backend/src/seer_backend/agent_orchestration/: __init__.py  errors.py  models.py  repository.py  runner.py  service.py
seer-backend/src/seer_backend/ai/: __init__.py  assistant_tools.py  gateway.py  ontology_copilot.py  skills.py
seer-backend/src/seer_backend/analytics/: __init__.py  errors.py  models.py  rca_models.py  rca_repository.py  rca_service.py  repository.py  (+1 more)
seer-backend/tests/: test_actions_claim.py  test_actions_concurrency.py  test_actions_faults.py  test_actions_lifecycle.py  test_actions_repository.py  test_actions_status_api.py  test_actions_submit.py  test_agent_orchestration_phase3.py  test_agent_orchestration_phase4.py  test_ai_phase5.py  test_catalog_phase1.py  test_health.py  test_history_phase2.py  test_managed_agent_authoring_phase1.py  test_managed_agent_runner.py  test_ontology_phase1.py  test_process_phase3.py  test_query_guard.py  test_root_cause_fake_data.py  test_root_cause_phase4.py
seer-backend/tests/fixtures/: ontology_invalid_missing_name.ttl  rca_phase4_orders.json  root_cause_fake_data_250.json
(+439 files in other folders)
